feat(Interactive.css): add style for desktop, docs(readme): update readme information

--- a/src/Interactive.css
+++ b/src/Interactive.css
@@ -98,6 +98,12 @@
     background-color: var(--white);
 }
 
+.rating__submit:disabled {
+    background-color: var(--grey-700);
+    cursor: not-allowed;
+    color: var(--grey-400);
+}
+
 /* Second page */
 
 .rating__card--thank-you {
@@ -134,3 +140,24 @@
     width: 120px;
     margin-bottom: 1.5rem;
 }
+
+/* Media queries */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (min-width: 576px) {
+    .rating {
+        max-width: 380px;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 992px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 1200px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1400px) {}
